# hazimetevol11back

./: .env  Dockerfile  Pipfile  app copy.db  app.db  docker-compose.yaml  poetryBackup.txt  pyproject.toml
.github/workflows/: main_app-alteradnaka.yml
api/: auth.py  crud.py  database.py  main.py  models.py  schemas.py
